# sk

./: CMakeLists.txt  Makefile  README.md  assem.py  breakline.py  checkCondition.py  checkExists.py  checkType.py  compiler.py  config.py  coreFunction.py  defFunction.py  defvar.py  function.py  funif.py  parser.py  preDefFun.py  type.py
Old/: Makefile  ass.asm  assem.py  checkExists.py  compiler.py  config.py  coreFunction.py  defvar.py  function.py  funif.py  print.k  store.py  test.s
Old/reservedFunctions/: exit.py
reservedFunctions/: exit.py  print.py
src/: Assembly.cpp  Assembly.h  CMakeLists.txt  README.md  include.h  lexer.cpp  lexer.h  main.cpp  main.h  tree.cpp  tree.h
src/assembly/: CMakeLists.txt  ass.cpp  ass.h
src/include/: CMakeLists.txt  include.cpp  include.h
src/lexer/: CMakeLists.txt  README.md  lexer.cpp  lexer.h
src/parser/: CMakeLists.txt  assignNode.cpp  binaryTreeNode.cpp  binopNode.cpp  branchNode.cpp  compareNode.cpp  defintionsNode.cpp  identifierNode.cpp  numNode.cpp  returnNode.cpp  symbol.cpp  symbol.h  tree.cpp  tree.h  visualizer.cpp
test/: CMakeLists.txt  catch.hpp  test.cpp  testMain.cpp
test/assembly/: assembly.h  defintions.cpp
test/include/: fileInput.cpp  fileInput.h  path.cpp  removePath.cpp
test/include/testhold/: includeBack.k  includehere.k
test/lexer/: lex.cpp  lex.h  tokensGen.cpp  tokensGen.h
test/parser/: assign.cpp  binop.cpp  branch.cpp  defintions.cpp  identifier.cpp  num.cpp  parser.h  returnNode.cpp  search.cpp  symbolTable.cpp
